Thu Mar 18 03:47:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (ruby_threadptr_init): added prototype.

Tue Feb 16 09:35:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (ruby_vm_init_add_{library,library_path,initializer}):
	  implemented.

	* mvm.c (ruby_vm_init_{verbose,debug,stdin,stdout,stderr}): ditto.

	* io.c (InitVM_IO), ruby.c (ruby_vm_process_options): initialize with
	  init_options if set.

	* vm_core.h (struct rb_vm_options): moved cmdline_options from ruby.c.

	* vm_core.h (rb_vm_t): added init_options.

Sat Feb 13 13:16:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_t): moved signal queue back from rb_thread_t.

	* thread.c (rb_thread_start_timer_thread): create timer thread the
	  first time only.

Sat Feb 13 12:36:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_bytestream_t): IO-like inter VM interface.

Sat Feb 13 07:11:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* (ruby_vm_send_signal): deal with signals properly.

Sat Nov 21 01:03:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_mark): mark possible objects.

	* vm.c (rb_vm_s_parent, rb_vm_parent): new methods to return the
	  parent VM.

	* file.c (Init_File): initialize key for separator only once.

Fri Nov 20 08:15:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_start): handshake.

Fri Nov 20 08:14:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_copy_to_vm): reset instance variables.

Fri Nov 20 04:39:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_send, rb_vm_recv): supported strings.

Fri Nov 20 04:38:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift_wait): fixed the case of no-timeout.

Tue Nov 17 12:00:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_t): manage references from other VMs.

	* mvm.c (ruby_vm_destruct): ditto.

	* vm.c (ruby_vm_free, vm_init2, vm_create, InitVM_VM): ditto.
